chore: prepare workspace before release

--- a/apps/docs/content/docs/guides/getting-started/try-the-api.mdx
+++ b/apps/docs/content/docs/guides/getting-started/try-the-api.mdx
@@ -11,7 +11,7 @@ it's time to try out the API!
 <Callout type="info">
 This guide assumes you chose to populate sample data when installing Deenruv.
 
-You can also follow along with these example using the public demo playground at [demo.deenruv.io/shop-api](https://demo.deenruv.io/shop-api)
+You can also follow along with these example using the public demo playground at [demo.deenruv.com/shop-api](https://demo.deenruv.com/shop-api)
 </Callout>
 
 ## GraphQL Playground
