--- a/apps/docs/content/docs/guides/getting-started/try-the-api.pl.mdx
+++ b/apps/docs/content/docs/guides/getting-started/try-the-api.pl.mdx
@@ -11,7 +11,7 @@ pora wypróbować API!
 <Callout type="info">
 Ten przewodnik zakłada, że podczas instalacji Deenruv wybrałeś opcję wypełnienia przykładowymi danymi.
 
-Możesz również śledzić te przykłady, korzystając z publicznego demo pod adresem [demo.deenruv.io/shop-api](https://demo.deenruv.io/shop-api)
+Możesz również śledzić te przykłady, korzystając z publicznego demo pod adresem [demo.deenruv.com/shop-api](https://demo.deenruv.com/shop-api)
 </Callout>
 
 ## GraphQL Playground
