--- a/apps/docs/content/docs/guides/storefront/connect-api.mdx
+++ b/apps/docs/content/docs/guides/storefront/connect-api.mdx
@@ -177,7 +177,7 @@ import { useState, useEffect } from 'react';
 // in localStorage using this key.
 const AUTH_TOKEN_KEY = 'auth_token';
 
-const API_URL = 'https://readonlydemo.deenruv.io/shop-api';
+const API_URL = 'https://readonlydemo.deenruv.com/shop-api';
 
 let languageCode: string | undefined;
 let channelToken: string | undefined;
@@ -332,7 +332,7 @@ packages.
 import { ApolloClient, ApolloLink, HttpLink, InMemoryCache } from '@apollo/client';
 import { setContext } from '@apollo/client/link/context';
 
-const API_URL = `https://demo.deenruv.io/shop-api`;
+const API_URL = `https://demo.deenruv.com/shop-api`;
 
 // If using bearer-token based session management, we'll store the token
 // in localStorage using this key.
