--- a/apps/docs/content/docs/guides/storefront/connect-api.pl.mdx
+++ b/apps/docs/content/docs/guides/storefront/connect-api.pl.mdx
@@ -170,7 +170,7 @@ import { useState, useEffect } from 'react';
 // przechowujemy token w localStorage pod tym kluczem.
 const AUTH_TOKEN_KEY = 'auth_token';
 
-const API_URL = 'https://readonlydemo.deenruv.io/shop-api';
+const API_URL = 'https://readonlydemo.deenruv.com/shop-api';
 
 let languageCode: string | undefined;
 let channelToken: string | undefined;
@@ -323,7 +323,7 @@ Postępuj zgodnie z [instrukcjami rozpoczęcia pracy](https://www.apollographql.
 import { ApolloClient, ApolloLink, HttpLink, InMemoryCache } from '@apollo/client';
 import { setContext } from '@apollo/client/link/context';
 
-const API_URL = `https://demo.deenruv.io/shop-api`;
+const API_URL = `https://demo.deenruv.com/shop-api`;
 
 // Jeśli używamy zarządzania sesjami opartego na tokenach bearer,
 // przechowujemy token w localStorage pod tym kluczem.
