--- a/apps/docs/content/docs/guides/storefront/customer-accounts.pl.mdx
+++ b/apps/docs/content/docs/guides/storefront/customer-accounts.pl.mdx
@@ -218,10 +218,10 @@ EmailPlugin.init({
     templatePath: path.join(__dirname, '../static/email/templates'),
     outputPath: path.join(__dirname, '../static/email/output'),
     globalTemplateVars: {
-        fromAddress: '"Deenruv Demo Store" <noreply@deenruv.io>',
-        verifyEmailAddressUrl: 'https://demo.deenruv.io/storefront/account/verify',
-        passwordResetUrl: 'https://demo.deenruv.io/storefront/account/reset-password',
-        changeEmailAddressUrl: 'https://demo.deenruv.io/storefront/account/change-email-address'
+        fromAddress: '"Deenruv Demo Store" <noreply@deenruv.com>',
+        verifyEmailAddressUrl: 'https://demo.deenruv.com/storefront/account/verify',
+        passwordResetUrl: 'https://demo.deenruv.com/storefront/account/reset-password',
+        changeEmailAddressUrl: 'https://demo.deenruv.com/storefront/account/change-email-address'
     },
     devMode: true,
 }),
